HDX-4951 - HXL Preview: UI widgets                       - fix chart placeholder look when tag is long + display second tag                       - chart X axis values are overlapping                       - chart hover misplaced

--- a/src/app/bites/bite/content/content-chart/content-chart.component.less
+++ b/src/app/bites/bite/content/content-chart/content-chart.component.less
@@ -13,12 +13,13 @@
       }
     }
     .placeholder-content{
+      z-index: -1;
       position: absolute;
       bottom: 10px;
       text-align: center;
       i {
         font-size: 58px;
-        color: #eee;
+        color: rgba(238, 238, 238, 0.5);
       }
       .description {
         margin-top: 15px;
